# gene-perturbation-prediction

./: .gitignore  AGENTS.md  MANIFEST.md  ORGANIZATION.md  README.md  csc286_eval.py  environment.yml  prompt.md  pyproject.toml  requirements.txt
docs/: data.md  eval_metrics.md
docs/data/: h5ad_visualize.md
docs/project-intro/: introduction.md
docs/report/: 1120.md  midterm.md
docs/roadmap/: 03_eval_integration.md  04_scGPT_finetune.md  06_reverse_pert_setup.md  07_scgpt_retrieval_optimization.md  08_scgpt_performance_recovery.md
logs/baseline/: slurm_794346.err  slurm_795317.err
logs/finetune/: slurm_792639.err  slurm_792639.out
logs/zeroshot/: slurm_790296.err  slurm_790296.out  slurm_792453.err  slurm_792453.out  slurm_792454.err  slurm_792454.out  slurm_792620.err  slurm_792620.out
model/scGPT/: config.json
model/scgpt_finetune_old/: history_head_only.json  history_lora_head.json
results/baseline/: perturbation_metrics.csv
results/reports/: baseline_comparison.csv  baseline_comparison.md  scgpt_ablations.csv  scgpt_ablations.md  scgpt_ablative_comparison.csv  scgpt_ablative_comparison.md
results/scgpt_zeroshot/: perturbation_metrics.csv
scripts/: baseline.sh  compare.py  convert_to_gears.py  finetune.sh  preview_data.py  ridge.sh  scgpt.sh  visualize_h5ad.py  zeroshot.sh
scripts/data_process/: apply_log1p.py  optimize_h5ad.py
src/: finetune.py  main.py  main_new.py  train.py
src/configs/: additive.yaml  baseline.yaml  finetune.yaml  h5ad.yaml  logreg.yaml  pca.yaml  (+4 more)
tests/: test_de_metrics.py  test_training_validation_metrics.py
(+24 files in other folders)
