[project]
name = "vcc"
version = "0.1.0"
description = "Reverse Perturbation Prediction for CRISPR Perturb-seq"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
vcc = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]
extend-exclude = [
    "scGPT",
    "data/",
    "docs/",
]

[tool.ruff.lint]
select = ["E", "W", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

